--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "http://namhuynh2000.github.io/Covid-19-Tracker",
   "name": "covid-19tracker",
   "version": "0.1.0",
   "private": true,
